# claud.telegrambot

./: .env  .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  bot.py  requirements.txt  run.py  setup.py  start_bot.bat  start_bot.sh
config/: bot_config.py
rust/: Cargo.toml
rust/crates/telegram-bot/: .env.example  Cargo.toml  README.md
rust/crates/telegram-bot/src/: main.rs
src/: __init__.py  bot.py  run.py
src/reference_data/: commands_snapshot.json  tools_snapshot.json
