[package]
name = "telegram-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "AI MAKARAAIIII Telegram bot with Khmer language support"

[[bin]]
name = "telegram-bot"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json"] }

[lints]
workspace = true
